--- a/Markdown Previewer/index.html
+++ b/Markdown Previewer/index.html
@@ -11,14 +11,14 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
     <link rel="stylesheet" href="style.css" />
     <title>Mackdown Preview</title>
   </head>
   <body>
     <div id="root"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/11.1.1/marked.min.js"></script>
-    <script type="text/babel/module" src="./main.js"></script>
+    <script type="text/babel" src="main.js"></script>
   </body>
 </html>
