--- a/Drum Machine/index.html
+++ b/Drum Machine/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div id="root"></div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script type="text/babel" src="main.js"></script>
     <script src="main.js"></script>
