--- a/Drum Machine/index.html
+++ b/Drum Machine/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script type="text/babel" src="main.js"></script>
-    <script src="main.js"></script>
   </body>
 </html>
