--- a/25 + 5 Clock/index.html
+++ b/25 + 5 Clock/index.html
@@ -24,6 +24,8 @@
   <body>
     <div id="root"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/9.1.0/react-redux.mjs"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/5.0.1/redux.legacy-esm.js"></script>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script type="text/babel" src="main.js"></script>
   </body>
